<resources>
    <string name="app_name">Paw Guards</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_username_hint">Username</string>
    <string name="username_hint">Username</string>
    <string name="fullname_hint">Fullname</string>
    <string name="ownership">I Want to Adopt an Animal!</string>
    <string name="adopting">I Want To Be A Home For A Pet!</string>
    <string name="species">Species</string>
    <string name="breed">Breed</string>
    <string name="gender">Gender</string>
    <string name="birth">Doğum Tarihi</string>
    <string name="title_adoption">Introduce Your Cute Friend to Us!</string>
    <string name="name">Name</string>
    <string name="age">Age</string>

    <string-array name="animalsSpecies">
        <item>"Cat"</item>
        <item>"Dog"</item>
        <item>"Bird"</item>
    </string-array>

    <string-array name="gender">
        <item>"Female"</item>
        <item>"Male"</item>
        <item>"Uncertain/Baby"</item>
    </string-array>
</resources>